--- a/index.html
+++ b/index.html
@@ -4,7 +4,35 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>websites for local businesses</title>
+      <title>Websites for Local Businesses | Starber</title>
+      <meta
+        name="description"
+        content="Starber designs, builds, and manages modern websites for local businesses with clear UX, strong performance, and practical SEO foundations."
+      />
+      <meta name="robots" content="index, follow" />
+      <meta name="author" content="Starber" />
+
+      <link rel="canonical" href="https://starber.net/" />
+
+      <meta property="og:type" content="website" />
+      <meta property="og:site_name" content="Starber" />
+      <meta property="og:title" content="Websites for Local Businesses | Starber" />
+      <meta
+        property="og:description"
+        content="Starber designs, builds, and manages modern websites for local businesses with clear UX, strong performance, and practical SEO foundations."
+      />
+      <meta property="og:url" content="https://starber.net/" />
+      <meta property="og:image" content="https://starber.net/starber_site_screenshot.png" />
+      <meta property="og:image:alt" content="Starber website design showcase" />
+
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:title" content="Websites for Local Businesses | Starber" />
+      <meta
+        name="twitter:description"
+        content="Starber designs, builds, and manages modern websites for local businesses with clear UX, strong performance, and practical SEO foundations."
+      />
+      <meta name="twitter:image" content="https://starber.net/starber_site_screenshot.png" />
+
       <link rel="icon" type="image/png" href="/StarberLogoWhite.png" />
     </head>
 
